--- a/Player Details/playerdetails.html
+++ b/Player Details/playerdetails.html
@@ -26,7 +26,7 @@
         <div id="left-section">
           <div id="ipl-logo">
             <a href="../index.html"><img
-              src="https://drive.google.com/uc?id=1TUR9w4ihr8HwqlD9n1ZZrRUm2vhVO6bU&export=download"
+              src="https://drive.google.com/uc?export=view&id=1TUR9w4ihr8HwqlD9n1ZZrRUm2vhVO6bU"
               alt="IPL_2019_logo"
             /></a>
           </div>
